--- a/templates/macros/parts/macro-footer.hbs
+++ b/templates/macros/parts/macro-footer.hbs
@@ -1,9 +1,9 @@
-<footer class="base-form__footer">
+<footer class="erps-form__footer">
   {{#each footerButtons as |current|}}
     {{#if current}}
     <button
       type="{{current.type}}"
-      class="{{current.cssClass}}"
+      class="erps-button {{current.cssClass}}"
       {{#if current.action}}data-action="{{current.action}}"{{/if}}
     >
       {{current.label}}
